<resources>
    <string name="app_name">Minhas Despesas</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_third_fragment">Hello third fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Clique aqui caso ainda não tenha conta</string>
    <string name="voltar_ao_login">-> Voltar ao Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="r_00_00">R$ 00,00</string>
    <string name="data">Data</string>
    <string name="categoria">Categoria</string>
    <string name="descri_o">Descrição</string>
    <string name="confirmar">Confirmar</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="n_o_tem_conta_clique_aqui">Não tem conta Clique aqui</string>
</resources>